# Sigil

./: .gitignore  Cargo.toml  PART_B_FIX_BINARY_DISPATCH_PLAN.md  README.md  TODO.md  yt_dlp_out.json
.kiro/specs/sigil-deadlock-fix/: .config.kiro  bugfix.md  design.md  tasks.md
sigil-discord/: Cargo.toml
sigil-discord/benches/: frame_crypto.rs
sigil-discord/src/: lib.rs  session.rs  types.rs
sigil-discord/src/crypto/: frame_crypto.rs  key_ratchet.rs  mod.rs  uleb128.rs
sigil-discord/src/frame/: decryptor.rs  encryptor.rs  mod.rs
sigil-discord/src/gateway/: handler.rs  opcodes.rs  session.rs
sigil-discord/src/mls/: config.rs  credential.rs  group.rs  key_package.rs
sigil-discord/tests/: frame_payload_test.rs  key_ratchet_test.rs  uleb128_test.rs
sigil-voice/: Cargo.toml  errors.json
sigil-voice/examples/: basic_voice.rs
sigil-voice/src/: audio.rs  call.rs  driver.rs  gateway.rs  lib.rs  serenity_hook.rs  source.rs  track.rs  udp.rs
sigil-voice/tests/: deadlock_fix_test.rs
src/: error.rs  session.rs  types.rs
src/crypto/: codec.rs  key_ratchet.rs
src/frame/: payload.rs
src/gateway/: handler.rs  mod.rs
src/mls/: config.rs  group.rs  mod.rs
tests/: key_ratchet_test.rs  uleb128_test.rs
