[package]
name = "sigil-discord"
version = "0.1.0"
edition = "2024"
authors = ["Karmanya03 <karmanya03@proton.me>"]
description = "Sigil — Pure-Rust Discord DAVE (Audio/Video E2EE) protocol implementation"
license = "MIT"
repository = "https://github.com/Karmanya03/Sigil"
keywords = ["discord", "e2ee", "dave", "mls", "encryption"]
categories = ["cryptography", "multimedia"]

[dependencies]
# ── MLS Protocol (RFC 9420) ──
openmls = { version = "0.6", features = ["test-utils"] }
openmls_rust_crypto = "0.3"
openmls_basic_credential = "0.3"

# ── Frame Encryption ──
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# ── Voice Gateway Integration (optional, requires CMake for audiopus) ──
songbird = { version = "0.4", features = ["driver", "gateway"], optional = true }
serenity = { version = "0.12", default-features = false, features = ["voice", "gateway"], optional = true }

# ── Async + Serialization ──
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Utilities ──
bytes = "1"
tracing = "0.1"
thiserror = "2"
parking_lot = "0.12"

[features]
default = []
voice-gateway = ["songbird", "serenity"]

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1"

[[bench]]
name = "frame_crypto"
harness = false
