[package]
name = "sigil-voice"
version = "0.1.0"
edition = "2024"

[dependencies]
sigil-discord = { path = "../sigil-discord" }


# Async & Networking
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
url = "2.5"
futures-util = "0.3"

# Crypto & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0"
aes-gcm = "0.10"

# Discord Framework Integration
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }

